Improve Menu List styling on pre-HC devices (DO NOT MERGE)
This commit improves the styling of the menu panel
shown on < HC devices when using the Action Bar.
We now keep the native black background regardless
of base theme, maintaining the native framework
aesthetic as much as possible.

Change-Id: If2b5296c0d9b8e031760aef9b3ce328c7ac90357
Signed-off-by: Chris Banes <chrisbanes@google.com>

--- a/appcompat/res/layout/list_menu_item_layout.xml
+++ b/appcompat/res/layout/list_menu_item_layout.xml
@@ -14,9 +14,10 @@
      limitations under the License.
 -->
 
-<android.support.appcompat.view.menu.ListMenuItemView xmlns:android="http://schemas.android.com/apk/res/android"
-                                                 android:layout_width="match_parent"
-                                                 android:layout_height="?attr/listPreferredItemHeightSmall">
+<android.support.appcompat.view.menu.ListMenuItemView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/listPreferredItemHeightSmall">
 
     <!-- Icon will be inserted here. -->
 
@@ -24,6 +25,8 @@
     <RelativeLayout
             android:layout_width="0dip"
             android:layout_weight="1"
+            android:layout_marginLeft="?attr/listPreferredItemPaddingLeft"
+            android:layout_marginRight="?attr/listPreferredItemPaddingRight"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:duplicateParentState="true">
