--- a/appcompat/res/values/themes.xml
+++ b/appcompat/res/values/themes.xml
@@ -55,6 +55,7 @@
 
         <!-- Panel attributes -->
         <item name="panelMenuListWidth">296dip</item>
+        <item name="panelMenuListTheme">@style/Theme.AppCompat.CompactMenu</item>
 
         <!-- TODO(trevorjohns): The item below doesn't work. -->
         <!-- <item name="popupMenuStyle">@android:style/Widget.PopupMenu</item> -->
@@ -86,12 +87,17 @@
         <item name="textAppearanceListItem">?android:attr/textAppearanceMedium</item>
         <item name="textAppearanceListItemSmall">?android:attr/textAppearanceMedium</item>
 
+        <!-- Button attributes -->
+        <item name="homeAsUpIndicator">@drawable/ic_ab_back_holo_light</item>
+
         <!-- List attributes -->
         <item name="dropdownListPreferredItemHeight">64dip</item>
         <item name="dropDownListViewStyle">@android:style/Widget.ListView.DropDown</item>
 
-        <!-- Button attributes -->
-        <item name="homeAsUpIndicator">@drawable/ic_ab_back_holo_light</item>
+        <!-- Panel attributes -->
+        <item name="panelMenuListWidth">296dip</item>
+        <item name="panelMenuListTheme">@style/Theme.AppCompat.Light.CompactMenu</item>
+
     </style>
 
     <!-- Base platform-dependent theme providing a dark action bar in a light-themed activity. -->
