Improve Menu List styling on pre-HC devices
This commit improves the styling of the menu panel
shown on < HC devices when using the Action Bar.
We now keep the native black background regardless
of base theme, maintaining the native framework
aesthetic as much as possible.

Change-Id: I049e3f0d78154f1467cc97fee82d4aecc5966034
Signed-off-by: Chris Banes <chrisbanes@google.com>

--- a/appcompat/res/values/styles.xml
+++ b/appcompat/res/values/styles.xml
@@ -164,4 +164,24 @@
         <item name="paddingEnd">4dip</item>
     </style>
 
+    <style name="Theme.AppCompat.Base.CompactMenu" parent="">
+        <!-- Menu/item attributes -->
+        <item name="android:itemTextAppearance">?android:attr/textAppearanceMedium</item>
+        <item name="android:listViewStyle">@android:style/Widget.ListView.Menu</item>
+        <item name="android:background">@null</item>
+    </style>
+
+    <style name="Theme.AppCompat.Base.Light.CompactMenu" parent="">
+        <!-- Menu/item attributes -->
+        <item name="android:itemTextAppearance">?android:attr/textAppearanceMediumInverse</item>
+        <item name="android:listViewStyle">@android:style/Widget.ListView.Menu</item>
+        <item name="android:background">@null</item>
+    </style>
+
+    <style name="Theme.AppCompat.CompactMenu" parent="Theme.AppCompat.Base.CompactMenu">
+    </style>
+
+    <style name="Theme.AppCompat.Light.CompactMenu" parent="Theme.AppCompat.Base.Light.CompactMenu">
+    </style>
+
 </resources>
