Fix List Navigation on pre-HC devices
This commit fixes the use of list navigation on
the action bar. To make this possible:

- Imported Spinner and parents from ICS source.
- Imported a number of Holo resources, roughly 10
  drawables per density. This wasn't ideal but our
  drawable-*dpi dirs still only amount to ~40KB.

Change-Id: Ib8a9c1b9bd86cc8470b0f765ffa7a26ae30bac40
Signed-off-by: Chris Banes <chrisbanes@google.com>

--- a/appcompat/res/values-v14/themes.xml
+++ b/appcompat/res/values-v14/themes.xml
@@ -36,12 +36,11 @@
         <item name="dividerHorizontal">?attr/dividerHorizontal</item>
         <item name="actionBarDivider">?attr/actionBarDivider</item>
 
-        <item name="listPreferredItemHeight">?attr/listPreferredItemHeight</item>
-        <item name="listPreferredItemHeightSmall">?attr/listPreferredItemHeightSmall</item>
-        <item name="listPreferredItemHeightLarge">?attr/listPreferredItemHeightLarge</item>
-
-        <item name="listPreferredItemPaddingLeft">?attr/listPreferredItemPaddingLeft</item>
-        <item name="listPreferredItemPaddingRight">?attr/listPreferredItemPaddingRight</item>
+        <item name="listPreferredItemHeight">?android:attr/listPreferredItemHeight</item>
+        <item name="listPreferredItemHeightSmall">?android:attr/listPreferredItemHeightSmall</item>
+        <item name="listPreferredItemHeightLarge">?android:attr/listPreferredItemHeightLarge</item>
+        <item name="listPreferredItemPaddingLeft">?android:attr/listPreferredItemPaddingLeft</item>
+        <item name="listPreferredItemPaddingRight">?android:attr/listPreferredItemPaddingRight</item>
 
         <item name="textAppearanceListItem">?android:attr/textAppearanceMedium</item>
         <item name="textAppearanceListItemSmall">?android:attr/textAppearanceMedium</item>
@@ -63,12 +62,11 @@
         <item name="dividerHorizontal">?attr/dividerHorizontal</item>
         <item name="actionBarDivider">?attr/actionBarDivider</item>
 
-        <item name="listPreferredItemHeight">?attr/listPreferredItemHeight</item>
-        <item name="listPreferredItemHeightSmall">?attr/listPreferredItemHeightSmall</item>
-        <item name="listPreferredItemHeightLarge">?attr/listPreferredItemHeightLarge</item>
-
-        <item name="listPreferredItemPaddingLeft">?attr/listPreferredItemPaddingLeft</item>
-        <item name="listPreferredItemPaddingRight">?attr/listPreferredItemPaddingRight</item>
+        <item name="listPreferredItemHeight">?android:attr/listPreferredItemHeight</item>
+        <item name="listPreferredItemHeightSmall">?android:attr/listPreferredItemHeightSmall</item>
+        <item name="listPreferredItemHeightLarge">?android:attr/listPreferredItemHeightLarge</item>
+        <item name="listPreferredItemPaddingLeft">?android:attr/listPreferredItemPaddingLeft</item>
+        <item name="listPreferredItemPaddingRight">?android:attr/listPreferredItemPaddingRight</item>
 
         <item name="textAppearanceListItem">@android:attr/textAppearanceMedium</item>
         <item name="textAppearanceListItemSmall">@android:attr/textAppearanceMedium</item>
