--- a/appcompat/res/values/attrs.xml
+++ b/appcompat/res/values/attrs.xml
@@ -261,13 +261,11 @@
     <declare-styleable name="Theme">
         <!-- TODO(trevorjohns): Add other attributes! -->
         <!-- Default ActionBar dropdown style. -->
-        <attr name="actionDropDownStylFe" format="reference"/>
+        <attr name="actionDropDownStyle" format="reference"/>
         <!-- The preferred item height for dropdown lists. -->
         <attr name="dropdownListPreferredItemHeight" format="dimension"/>
         <!-- Default PopupMenu style. -->
         <attr name="popupMenuStyle" format="reference"/>
-        <!-- Default ActionBar dropdown style. -->
-        <attr name="actionDropDownStyle" format="reference"/>
 
         <!-- ============ -->
         <!-- Panel styles -->
@@ -419,8 +417,48 @@
 
     </declare-styleable>
 
+    <declare-styleable name="Spinner">
+        <!-- The prompt to display when the spinner's dialog is shown. -->
+        <attr name="prompt" format="reference" />
+        <!-- Display mode for spinner options. -->
+        <attr name="spinnerMode" format="enum">
+            <!-- Spinner options will be presented to the user as a dialog window. -->
+            <enum name="dialog" value="0" />
+            <!-- Spinner options will be presented to the user as an inline dropdown
+                 anchored to the spinner widget itself. -->
+            <enum name="dropdown" value="1" />
+        </attr>
+        <!-- List selector to use for spinnerMode="dropdown" display. -->
+        <attr name="android:dropDownSelector" />
+        <!-- Background drawable to use for the dropdown in spinnerMode="dropdown". -->
+        <attr name="android:popupBackground" />
+        <!-- Vertical offset from the spinner widget for positioning the dropdown in
+             spinnerMode="dropdown". -->
+        <attr name="android:dropDownVerticalOffset" />
+        <!-- Horizontal offset from the spinner widget for positioning the dropdown
+             in spinnerMode="dropdown". -->
+        <attr name="android:dropDownHorizontalOffset" />
+        <!-- Width of the dropdown in spinnerMode="dropdown". -->
+        <attr name="android:dropDownWidth" />
+        <!-- Reference to a layout to use for displaying a prompt in the dropdown for
+             spinnerMode="dropdown". This layout must contain a TextView with the id
+             @android:id/text1 to be populated with the prompt text. -->
+        <attr name="popupPromptView" format="reference" />
+        <!-- Gravity setting for positioning the currently selected item. -->
+        <attr name="android:gravity" />
+        <!-- Whether this spinner should mark child views as enabled/disabled when
+             the spinner itself is enabled/disabled. -->
+        <attr name="disableChildrenWhenDisabled" format="boolean" />
+    </declare-styleable>
+
 
     <attr name="dividerPadding" format="dimension"/>
+
+    <!-- Default Spinner style. -->
+    <attr name="spinnerStyle" format="reference" />
+
+    <!-- Default Spinner style. -->
+    <attr name="spinnerDropDownItemStyle" format="reference" />
 
 
 </resources>
