--- a/appcompat/res/values/styles.xml
+++ b/appcompat/res/values/styles.xml
@@ -209,4 +209,73 @@
     <style name="Theme.AppCompat.Light.CompactMenu" parent="Theme.AppCompat.Base.Light.CompactMenu">
     </style>
 
+
+
+    <!-- Action Bar Spinner Widgets -->
+
+    <style name="Widget.AppCompat.Base.Spinner" parent="">
+        <item name="spinnerMode">dropdown</item>
+        <item name="android:popupBackground">@drawable/menu_dropdown_panel_holo_dark</item>
+        <item name="android:dropDownSelector">@drawable/list_selector_holo_dark</item>
+        <item name="android:dropDownVerticalOffset">0dip</item>
+        <item name="android:dropDownHorizontalOffset">0dip</item>
+        <item name="android:dropDownWidth">wrap_content</item>
+        <item name="android:gravity">left|center_vertical</item>
+        <item name="android:clickable">true</item>
+    </style>
+
+    <style name="Widget.AppCompat.Light.Base.Spinner" parent="Widget.AppCompat.Base.Spinner">
+        <item name="android:dropDownSelector">@drawable/list_selector_holo_light</item>
+        <item name="android:popupBackground">@drawable/menu_dropdown_panel_holo_light</item>
+    </style>
+
+    <style name="Widget.AppCompat.Spinner.DropDown.ActionBar"
+           parent="Widget.AppCompat.Base.Spinner">
+        <item name="android:background">@drawable/spinner_ab_holo_dark</item>
+    </style>
+
+    <style name="Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
+           parent="Widget.AppCompat.Light.Base.Spinner">
+        <item name="android:background">@drawable/spinner_ab_holo_light</item>
+    </style>
+
+    <style name="Widget.AppCompat.Base.DropDownItem.Spinner" parent="">
+        <item name="android:textAppearance">@style/TextAppearance.Widget.AppCompat.DropDownItem</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingRight">8dp</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
+    <style name="Widget.AppCompat.Light.Base.DropDownItem.Spinner"
+           parent="Widget.AppCompat.Base.DropDownItem.Spinner">
+    </style>
+
+    <style name="Widget.AppCompat.DropDownItem.Spinner"
+           parent="Widget.AppCompat.Base.DropDownItem.Spinner">
+    </style>
+    <style name="Widget.AppCompat.Light.DropDownItem.Spinner"
+           parent="Widget.AppCompat.Light.Base.DropDownItem.Spinner">
+    </style>
+
+    <style name="TextAppearance.Widget.AppCompat.DropDownItem" parent="">
+        <item name="android:textColor">?android:attr/textColorPrimaryDisableOnly</item>
+    </style>
+
+    <style name="Widget.AppCompat.Base.ListView.DropDown" parent="@android:style/Widget.ListView">
+        <item name="android:listSelector">@drawable/list_selector_holo_dark</item>
+    </style>
+
+    <style name="Widget.AppCompat.Light.Base.ListView.DropDown"
+           parent="@android:style/Widget.ListView">
+        <item name="android:listSelector">@drawable/list_selector_holo_light</item>
+    </style>
+
+    <style name="Widget.AppCompat.ListView.DropDown"
+           parent="Widget.AppCompat.Base.ListView.DropDown">
+    </style>
+
+    <style name="Widget.AppCompat.Light.ListView.DropDown"
+           parent="Widget.AppCompat.Light.Base.ListView.DropDown">
+    </style>
+
 </resources>
