ActionBarCompat Style clean ups
This commit tidies up the styles and theme in
ActionBarCompat so they can be easily customised
by developers. All AppCompat.Base themes have been
moved to styles_base.xml and themes_base.xml. This
was to aid devlopment but I think it will help
developers too.

styles.xml and themes.xml now only contain empty
styles which devlopers can extend.

Light.DarkAction still needs to be implemented.

Change-Id: Ic0277c272671096034c6cc6d3077a856885f89a9
Signed-off-by: Chris Banes <chrisbanes@google.com>

--- a/appcompat/res/values/dimens.xml
+++ b/appcompat/res/values/dimens.xml
@@ -45,4 +45,7 @@
     <!-- Minimum width for an action button in the menu area of an action bar -->
     <dimen name="action_button_min_width">56dip</dimen>
 
+
+    <dimen name="panel_menu_list_width">296dp</dimen>
+
 </resources>
