--- a/appcompat/res/values-v11/styles_base.xml
+++ b/appcompat/res/values-v11/styles_base.xml
@@ -15,14 +15,16 @@
 -->
 
 <resources>
+
     <!-- Patterned after style name="Widget.Holo.Light.ActionBar.Solid" -->
-    <style name="Widget.AppCompat.ActionBar.Solid" parent="@android:style/Widget.Holo.ActionBar">
+    <style name="Widget.AppCompat.ActionBar.Solid" parent="android:Widget.Holo.ActionBar">
         <item name="android:background">@drawable/ab_solid_light_holo</item>
     </style>
 
     <!-- Patterned after style name="Widget.Holo.Light.ActionBar.Solid.Inverse" -->
     <style name="Widget.AppCompat.ActionBar.Solid.Inverse"
-           parent="@android:style/Widget.Holo.ActionBar">
+           parent="android:Widget.Holo.ActionBar">
         <item name="android:background">@drawable/ab_solid_dark_holo</item>
     </style>
+
 </resources>
