--- a/appcompat/res/values/styles.xml
+++ b/appcompat/res/values/styles.xml
@@ -15,159 +15,69 @@
 -->
 
 <resources>
-    <!-- Like in themes.xml, the namespace "*.AppCompat.Base" is used to
-         define base styles for the platform version. The "*.AppCompat"
-         variants are for direct use or use as parent styles by the app. -->
-    <eat-comment/>
 
-    <style name="Widget.AppCompat.Base.ActionBar" parent="">
-        <item name="displayOptions">useLogo|showHome|showTitle</item>
-        <item name="divider">@drawable/action_bar_divider</item>
-        <item name="height">?attr/actionBarSize</item>
-        <item name="homeLayout">@layout/action_bar_home</item>
-    </style>
+    <!-- Styles in here can be extended for customisation in your application. Each utilises
+         one of the Base styles. If Holo themes are available on the current platform version
+         they will be used instead of the compat styles. -->
 
-    <style name="Widget.AppCompat.Base.ActionButton" parent="">
-        <item name="android:background">?attr/actionBarItemBackground</item>
-        <item name="android:paddingLeft">12dip</item>
-        <item name="android:paddingRight">12dip</item>
-        <item name="android:minWidth">@dimen/action_button_min_width</item>
-        <item name="android:minHeight">?attr/actionBarSize</item>
-        <item name="android:gravity">center</item>
-        <item name="android:maxLines">2</item>
-    </style>
-
-    <style name="Widget.AppCompat.Base.ActionButton.Overflow" parent="">
-    </style>
-
-    <style name="Widget.AppCompat.Base.ActionBar.TabBar" parent="">
-        <item name="android:divider">?attr/actionBarDivider</item>
-        <item name="android:showDividers">middle</item>
-        <item name="android:dividerPadding">12dip</item>
-    </style>
-
-    <style name="Widget.AppCompat.Base.ActionBar.TabView" parent="">
-        <item name="android:background">@drawable/tab_indicator_ab_holo</item>
-        <item name="android:gravity">center_horizontal</item>
-        <item name="android:paddingLeft">16dip</item>
-        <item name="android:paddingRight">16dip</item>
-    </style>
-
-    <style name="Widget.AppCompat.Base.ActionBar.TabText" parent="">
-        <item name="android:textAppearance">@null</item>
-        <item name="android:textColor">?android:attr/textColorPrimaryDisableOnly</item>
-        <item name="android:textSize">12sp</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textAllCaps">true</item>
-        <item name="android:ellipsize">marquee</item>
-        <item name="android:maxLines">2</item>
-    </style>
-
-    <style name="Widget.AppCompat.Base.ActionMode" parent="">
-        <item name="android:background">?attr/actionModeBackground</item>
-        <item name="backgroundSplit">?attr/actionModeSplitBackground</item>
-        <item name="android:height">?attr/actionBarSize</item>
-        <item name="titleTextStyle">@style/TextAppearance.Widget.ActionMode.Title</item>
-        <item name="subtitleTextStyle">@style/TextAppearance.Widget.ActionMode.Subtitle</item>
-    </style>
-
-
-    <style name="TextAppearance.AppCompat.Base.Widget.ActionBar.Menu"
-           parent="@android:style/TextAppearance.Small">
-        <item name="android:textSize">12sp</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textColor">?attr/actionMenuTextColor</item>
-    </style>
-
-    <!-- Default action bar style. Remember that if you are overriding
-         any attributes here in a derived style, you should declare each
-         item twice - both with and without the "android:" namespace prefix. -->
     <style name="Widget.AppCompat.ActionBar" parent="Widget.AppCompat.Base.ActionBar">
-        <item name="titleTextStyle">@style/TextAppearance.Widget.AppCompat.ActionBar.Title</item>
-        <item name="subtitleTextStyle">@style/TextAppearance.Widget.AppCompat.ActionBar.Subtitle
-        </item>
-
-        <item name="background">@drawable/ab_transparent_dark_holo</item>
-
-        <item name="homeAsUpIndicator">@drawable/ic_ab_back_holo_dark</item>
-
-        <item name="actionButtonStyle">@style/Widget.AppCompat.ActionButton</item>
-        <item name="actionOverflowButtonStyle">@style/Widget.AppCompat.ActionButton.Overflow</item>
-
-        <item name="progressBarStyle">@style/Widget.AppCompat.ProgressBar.Horizontal</item>
-        <item name="indeterminateProgressStyle">@style/Widget.AppCompat.ProgressBar.Small</item>
-
     </style>
 
-    <style name="Widget.AppCompat.Light.ActionBar" parent="Widget.AppCompat.Base.ActionBar">
-        <item name="titleTextStyle">@style/TextAppearance.Widget.AppCompat.ActionBar.Title</item>
-        <item name="subtitleTextStyle">@style/TextAppearance.Widget.AppCompat.ActionBar.Subtitle
-        </item>
-
-        <item name="background">@drawable/ab_transparent_light_holo</item>
-
-        <item name="homeAsUpIndicator">@drawable/ic_ab_back_holo_light</item>
-
-        <item name="actionButtonStyle">@style/Widget.AppCompat.ActionButton</item>
-        <item name="actionOverflowButtonStyle">@style/Widget.AppCompat.ActionButton.Overflow</item>
-
-        <!-- TODO(chrisbanes): Change these to Light themes -->
-        <item name="progressBarStyle">@style/Widget.AppCompat.ProgressBar.Horizontal</item>
-        <item name="indeterminateProgressStyle">@style/Widget.AppCompat.ProgressBar.Small</item>
+    <style name="Widget.AppCompat.Light.ActionBar" parent="Widget.AppCompat.Light.Base.ActionBar">
     </style>
 
-    <style name="TextAppearance.Widget.AppCompat.ActionBar.Title"
-           parent="@android:style/TextAppearance.Medium">
-    </style>
-    <style name="TextAppearance.Widget.AppCompat.ActionBar.Subtitle"
-           parent="@android:style/TextAppearance.Small">
+    <style name="TextAppearance.AppCompat.ActionBar.Title"
+           parent="TextAppearance.AppCompat.Base.ActionBar.Title">
     </style>
 
-    <style name="Widget.AppCompat.ProgressBar.Horizontal" parent="android:Widget.ProgressBar">
-        <item name="android:indeterminateOnly">false</item>
-        <item name="android:progressDrawable">@android:drawable/progress_horizontal</item>
-        <item name="android:indeterminateDrawable">
-            @android:drawable/progress_indeterminate_horizontal
-        </item>
-        <item name="android:minHeight">20dip</item>
-        <item name="android:maxHeight">20dip</item>
+    <style name="TextAppearance.AppCompat.ActionBar.Subtitle"
+           parent="TextAppearance.AppCompat.Base.ActionBar.Subtitle">
     </style>
 
-    <style name="Widget.AppCompat.ProgressBar.Small" parent="android:Widget.ProgressBar">
-        <item name="android:indeterminateDrawable">@drawable/progress_small_white</item>
-        <item name="android:minWidth">16dip</item>
-        <item name="android:maxWidth">16dip</item>
-        <item name="android:minHeight">16dip</item>
-        <item name="android:maxHeight">16dip</item>
+    <style name="Widget.AppCompat.ProgressBar.Horizontal"
+           parent="Widget.AppCompat.Base.ProgressBar.Horizontal">
     </style>
 
-
-    <!-- TODO(anirudhd): The item below doesn't work. -->
-    <!--<style name="Widget.AppCompat.ListPopupWindow">-->
-    <!--<item name="android:dropDownSelector">@android:drawable/list_selector_background</item>-->
-    <!--<item name="android:popupBackground">@android:drawable/spinner_dropdown_background</item>-->
-    <!--<item name="android:dropDownWidth">wrap_content</item>-->
-    <!--</style>-->
-
-    <!--<style name="Widget.AppCompat.PopupMenu" parent="Widget.AppCompat.ListPopupWindow">-->
-    <!--</style>-->
+    <style name="Widget.AppCompat.ProgressBar.Small"
+           parent="Widget.AppCompat.Base.ProgressBar.Small">
+    </style>
 
     <style name="Widget.AppCompat.ActionButton" parent="Widget.AppCompat.Base.ActionButton">
+    </style>
+
+    <style name="Widget.AppCompat.Light.ActionButton"
+           parent="Widget.AppCompat.Light.Base.ActionButton">
     </style>
 
     <style name="Widget.AppCompat.ActionButton.Overflow"
            parent="Widget.AppCompat.Base.ActionButton.Overflow">
     </style>
 
+    <style name="Widget.AppCompat.Light.ActionButton.Overflow"
+           parent="Widget.AppCompat.Light.Base.ActionButton.Overflow">
+    </style>
+
     <style name="Widget.AppCompat.ActionBar.TabBar" parent="Widget.AppCompat.Base.ActionBar.TabBar">
+    </style>
+
+    <style name="Widget.AppCompat.Light.ActionBar.TabBar"
+           parent="Widget.AppCompat.Light.Base.ActionBar.TabBar">
     </style>
 
     <style name="Widget.AppCompat.ActionBar.TabView"
            parent="Widget.AppCompat.Base.ActionBar.TabView">
     </style>
 
+    <style name="Widget.AppCompat.Light.ActionBar.TabView"
+           parent="Widget.AppCompat.Light.Base.ActionBar.TabView">
+    </style>
+
     <style name="Widget.AppCompat.ActionBar.TabText"
            parent="Widget.AppCompat.Base.ActionBar.TabText">
+    </style>
+
+    <style name="Widget.AppCompat.Light.ActionBar.TabText"
+           parent="Widget.AppCompat.Light.Base.ActionBar.TabText">
     </style>
 
     <style name="TextAppearance.AppCompat.Widget.ActionBar.Menu"
@@ -177,77 +87,24 @@
     <style name="Widget.AppCompat.ActionMode" parent="Widget.AppCompat.Base.ActionMode">
     </style>
 
-    <style name="TextAppearance.Widget.ActionMode.Title"
-           parent="@android:style/TextAppearance.Medium">
+    <style name="TextAppearance.AppCompat.ActionMode.Title"
+           parent="TextAppearance.AppCompat.Base.ActionMode.Title">
     </style>
 
-    <style name="TextAppearance.Widget.ActionMode.Subtitle"
-           parent="@android:style/TextAppearance.Small">
-        <item name="android:textColor">?android:attr/textColorSecondary</item>
+    <style name="TextAppearance.AppCompat.ActionMode.Subtitle"
+           parent="TextAppearance.AppCompat.Base.ActionMode.Subtitle">
     </style>
 
-    <style name="Widget.ActionBar.TabView" parent="Widget.AppCompat.Base.ActionBar.TabView">
-    </style>
-
-    <style name="Theme.AppCompat.Base.CompactMenu" parent="">
-        <!-- Menu/item attributes -->
-        <item name="android:itemTextAppearance">?android:attr/textAppearanceMedium</item>
-        <item name="android:listViewStyle">@android:style/Widget.ListView.Menu</item>
-        <item name="android:background">@null</item>
-    </style>
-
-    <style name="Theme.AppCompat.Base.Light.CompactMenu" parent="">
-        <!-- Menu/item attributes -->
-        <item name="android:itemTextAppearance">?android:attr/textAppearanceMediumInverse</item>
-        <item name="android:listViewStyle">@android:style/Widget.ListView.Menu</item>
-        <item name="android:background">@null</item>
-    </style>
-
-    <style name="Theme.AppCompat.CompactMenu" parent="Theme.AppCompat.Base.CompactMenu">
-    </style>
-
-    <style name="Theme.AppCompat.Light.CompactMenu" parent="Theme.AppCompat.Base.Light.CompactMenu">
-    </style>
-
-
-
-    <!-- Action Bar Spinner Widgets -->
-
-    <style name="Widget.AppCompat.Base.Spinner" parent="">
-        <item name="spinnerMode">dropdown</item>
-        <item name="android:popupBackground">@drawable/menu_dropdown_panel_holo_dark</item>
-        <item name="android:dropDownSelector">@drawable/list_selector_holo_dark</item>
-        <item name="android:dropDownVerticalOffset">0dip</item>
-        <item name="android:dropDownHorizontalOffset">0dip</item>
-        <item name="android:dropDownWidth">wrap_content</item>
-        <item name="android:gravity">left|center_vertical</item>
-        <item name="android:clickable">true</item>
-    </style>
-
-    <style name="Widget.AppCompat.Light.Base.Spinner" parent="Widget.AppCompat.Base.Spinner">
-        <item name="android:dropDownSelector">@drawable/list_selector_holo_light</item>
-        <item name="android:popupBackground">@drawable/menu_dropdown_panel_holo_light</item>
+    <style name="TextAppearance.AppCompat.DropDownItem"
+           parent="TextAppearance.AppCompat.Base.DropDownItem">
     </style>
 
     <style name="Widget.AppCompat.Spinner.DropDown.ActionBar"
            parent="Widget.AppCompat.Base.Spinner">
-        <item name="android:background">@drawable/spinner_ab_holo_dark</item>
     </style>
 
     <style name="Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
            parent="Widget.AppCompat.Light.Base.Spinner">
-        <item name="android:background">@drawable/spinner_ab_holo_light</item>
-    </style>
-
-    <style name="Widget.AppCompat.Base.DropDownItem.Spinner" parent="">
-        <item name="android:textAppearance">@style/TextAppearance.Widget.AppCompat.DropDownItem</item>
-        <item name="android:paddingLeft">8dp</item>
-        <item name="android:paddingRight">8dp</item>
-        <item name="android:gravity">center_vertical</item>
-    </style>
-
-    <style name="Widget.AppCompat.Light.Base.DropDownItem.Spinner"
-           parent="Widget.AppCompat.Base.DropDownItem.Spinner">
     </style>
 
     <style name="Widget.AppCompat.DropDownItem.Spinner"
@@ -255,19 +112,6 @@
     </style>
     <style name="Widget.AppCompat.Light.DropDownItem.Spinner"
            parent="Widget.AppCompat.Light.Base.DropDownItem.Spinner">
-    </style>
-
-    <style name="TextAppearance.Widget.AppCompat.DropDownItem" parent="">
-        <item name="android:textColor">?android:attr/textColorPrimaryDisableOnly</item>
-    </style>
-
-    <style name="Widget.AppCompat.Base.ListView.DropDown" parent="@android:style/Widget.ListView">
-        <item name="android:listSelector">@drawable/list_selector_holo_dark</item>
-    </style>
-
-    <style name="Widget.AppCompat.Light.Base.ListView.DropDown"
-           parent="@android:style/Widget.ListView">
-        <item name="android:listSelector">@drawable/list_selector_holo_light</item>
     </style>
 
     <style name="Widget.AppCompat.ListView.DropDown"
